# huellas-paisas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/application/: __init__.py  chat_service.py  dtos.py  product_service.py
src/domain/: entities.py  exceptions.py  repositories.py
src/infrastructure/api/: main.py
src/infrastructure/db/: database.py  init_data.py  models.py
src/infrastructure/llm_providers/: gemini_service.py
src/infrastructure/repositories/: chat_repository.py  product_repository.py
tests/: conftest.py  test_api.py  test_chat_service.py  test_entities.py  test_gemini_service.py  test_init_data.py  test_product_service.py
